@@ -4,6 +4,14 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
+  <TextView
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/Transaction"
+    android:textColor="@color/yellow"
+    android:gravity="right"
+    android:visibility="gone"
+    />  
   <LinearLayout
     android:id="@+id/QueryFrame"
     android:orientation="horizontal"
